...
        const style = stylesheet
        return (
            <Surface style={style.surface}>
                <View style={style.selector}>
                    <Text style={style.selector_text}>Overview: </Text>
                    <TouchableOpacity
                        testID="ChooseWallet"
                        onPress={this.props.handleChooseWallet}
                    >
                        <Text style={style.info_field_text_highlight}>My Wallet
                            <Icon name="chevron-down" size={20} />
                        </Text>
                    </TouchableOpacity>
...
